config/kubernetes/remote/nextcloud-storage/caesar-rest-beat-worker.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: beat-worker
  labels:
    app: beat-worker
spec:
  selector:
    matchLabels:
      app: beat-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: beat-worker
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
      - name: fuse
        hostPath:
          path: /dev/fuse
      - name: rclone-secret
        secret:
          secretName: rclone-secret
      containers:
      - name: beat-worker
        image: sriggi/caesar-rest-beat-worker:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: rclone-secret
            mountPath: "/root/.config/rclone/"
          - name: fuse
            mountPath: "/dev/fuse"
        securityContext:
#          allowPrivilegeEscalation: false
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
        resources: 
          requests:
            cpu: "0.1"
            memory: "256Mi"
