config/kubernetes/remote/nextcloud-storage/caesar-rest-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: db
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
#kind: Deployment
kind: StatefulSet
metadata:
  name: db
  labels:
    app: db
spec:
  serviceName: "db"
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      hostname: db
      containers:
      - name: db
        image: sriggi/caesar-rest-db:latest
        imagePullPolicy: Always 
#        command: ["mongod"]
        command:
          - "mongod"
          - "--bind_ip"
          - "0.0.0.0"
        resources: 
          requests:
            cpu: "0.1"
            memory: "256Mi"
        ports:
        - containerPort: 27017
          name: db
          protocol: TCP
        volumeMounts:
          - name: db-storage
            mountPath: /data/db
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: pvc-db
