config/kubernetes/remote/nextcloud-storage/caesar-rest.yaml
apiVersion: v1
kind: Service
metadata:
  name: caesar-rest
  labels:
    app: caesar-rest
spec:
  ports:
  - port: 3031
    protocol: TCP
    targetPort: 3031
  selector:
    app: caesar-rest
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: caesar-rest
  labels:
    app: caesar-rest
spec:
  selector:
    matchLabels:
      app: caesar-rest
  replicas: 1
  template:
    metadata:
      labels:
        app: caesar-rest
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
      - name: fuse
        hostPath:
          path: /dev/fuse
      - name: rclone-secret
        secret:
          secretName: rclone-secret
      containers:
      - name: caesar-rest
        image: sriggi/caesar-rest:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: rclone-secret
            mountPath: "/root/.config/rclone/"
          - name: fuse
            mountPath: "/dev/fuse"
        securityContext:
#          allowPrivilegeEscalation: false
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
        resources: 
          requests:
            cpu: "1"
            memory: "512Mi"
        ports:
        - containerPort: 3031
